# rterm

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  artsl@artsl.beget.tech
.github/workflows/: ci.yml  release.yml
crates/portable-pty-rterm/: Cargo.toml
crates/portable-pty-rterm/src/win/: mod.rs  psuedocon.rs
crates/rterm-app/: Cargo.toml  build.rs
crates/rterm-app/src/: icon.rs  main.rs  update_check.rs
crates/rterm-app/tests/: smoke_isolation.rs
crates/rterm-app/wix/: main.wxs
crates/rterm-config/: Cargo.toml
crates/rterm-config/src/: default.ru.toml  default.toml  lib.rs
crates/rterm-core/: Cargo.toml
crates/rterm-core/src/: color.rs  grid.rs  image.rs  lib.rs  parser.rs  plugin.rs  sixel.rs  terminal.rs
crates/rterm-history/: Cargo.toml
crates/rterm-history/src/: lib.rs
crates/rterm-plugin/: Cargo.toml
crates/rterm-plugin/src/: lib.rs
crates/rterm-pty/: Cargo.toml
crates/rterm-pty/src/: lib.rs
crates/rterm-render/: Cargo.toml
crates/rterm-render/src/: action.rs  bg.rs  clipboard.rs  command_capture.rs  event_loop.rs  events.rs  global_hotkey.rs  gpu.rs  highlight.rs  image_decode.rs  image_pass.rs  input.rs  keybind.rs  layout.rs  lib.rs  overlay.rs  palette.rs  paste_confirm.rs  payload.rs  suggestion_popup.rs  tree.rs  window_ops.rs
docs/: README.md  config.md  getting-started.md  keybindings.md  plugins-api.md  plugins.md  themes.md  ui.md
