[workspace]
resolver = "2"
members = [
    "crates/rterm-core",
    "crates/rterm-pty",
    "crates/rterm-config",
    "crates/rterm-history",
    "crates/rterm-plugin",
    "crates/rterm-render",
    "crates/rterm-app",
]
# Vendored portable-pty 0.8.1 with PSEUDOCONSOLE_PASSTHROUGH_MODE
# enabled (graceful fallback on older Windows). Kept out of
# workspace.members so its 3rd-party tests/clippy don't ride along
# with `cargo test --workspace`. See crates/portable-pty-rterm.
exclude = ["crates/portable-pty-rterm"]

[patch.crates-io]
portable-pty = { path = "crates/portable-pty-rterm" }

[workspace.package]
version = "0.0.12"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
authors = ["rterm contributors"]
repository = "https://github.com/ASlava12/rterm"

[workspace.dependencies]
# Internal crates
rterm-core = { path = "crates/rterm-core" }
rterm-pty = { path = "crates/rterm-pty" }
rterm-config = { path = "crates/rterm-config" }
rterm-plugin = { path = "crates/rterm-plugin" }
rterm-render = { path = "crates/rterm-render" }
rterm-history = { path = "crates/rterm-history" }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "tracing-log"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# toml_edit preserves comments / whitespace / section order across
# round-trips. Used for in-place updates to user-owned config files
# (e.g. `cycle_theme` persists `[appearance].theme` without
# clobbering hand-written comments).
toml_edit = "0.22"

# Lua plugins
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }

# Terminal emulation
vte = "0.13"
portable-pty = "0.8"
bitflags = "2.6"

# Unicode / text
unicode-width = "0.2"

# Rendering
wgpu = "23"
winit = "0.30"
# `monospace_fallback` makes cosmic-text (a) prefer monospace faces when
# picking a fallback font for symbols the primary family lacks, and
# (b) actually honour `Buffer::set_monospace_width` by snapping fallback
# glyph advances to whole-cell multiples. Without it both are no-ops and
# icons (▸ ◉ ⌗, Nerd Font glyphs, …) shaped from a proportional fallback
# drift the rest of the row off the cell grid — visible on Linux where
# the common monospace families lack symbol coverage.
cosmic-text = { version = "0.12", features = ["monospace_fallback"] }
glyphon = "0.7"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
arboard = "3"
open = "5"
base64 = "0.22"
regex = "1"

# Embedded relational store for the command-history feature
# (rterm-history). `bundled` compiles SQLite from vendored C so the
# resulting binary has no system-SQLite dependency on any platform.
rusqlite = { version = "0.32", features = ["bundled"] }

# Win32 imports for the global-hotkey worker thread (RegisterHotKey +
# its message-pump cousins). Pulled in only on Windows targets via the
# per-crate `[target.'cfg(windows)'.dependencies]` glue. The crate
# vendors generated bindings, so version bumps are routine.
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    # `GetCurrentThreadId` lives under `Win32_System_Threading`; the
    # global-hotkey worker reports its thread id back so the main
    # thread can post `WM_QUIT` to it on shutdown via
    # `PostThreadMessageW`.
    "Win32_System_Threading",
    # `AttachConsole(ATTACH_PARENT_PROCESS)` so the GUI release
    # build (which is a `windows_subsystem = "windows"` binary —
    # no auto-opened console) can still print CLI output to the
    # terminal that launched it.
    "Win32_System_Console",
] }

[profile.dev]
opt-level = 1            # Лучше отзывчивость TUI/PTY в dev-сборке
debug = true

[profile.dev.package."*"]
opt-level = 3            # Зависимости (wgpu, cosmic-text) собираем оптимизированно

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
