[package]
name = "rterm-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "rterm — cross-platform terminal with Lua plugins"

[[bin]]
name = "rterm"
path = "src/main.rs"

[dependencies]
rterm-core = { workspace = true }
rterm-pty = { workspace = true }
rterm-config = { workspace = true }
rterm-plugin = { workspace = true }
rterm-render = { workspace = true }

anyhow = { workspace = true }
arboard = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
