[package]
name = "rterm-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "rterm — cross-platform terminal with Lua plugins"
build = "build.rs"

[[bin]]
name = "rterm"
path = "src/main.rs"

[dependencies]
rterm-core = { workspace = true }
rterm-pty = { workspace = true }
rterm-config = { workspace = true }
rterm-plugin = { workspace = true }
rterm-render = { workspace = true }
rterm-history = { workspace = true }

anyhow = { workspace = true }
arboard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Update-check feature talks to the GitHub releases REST API. Pulled
# in here so the runtime binary depends on it; ureq is sync, blocking,
# and tiny — fine for a one-shot HTTP GET on a background thread.
#
# `native-tls` instead of the default rustls backend: rustls drags in
# `ring`, which on `aarch64-pc-windows-msvc` needs clang to compile
# its hand-written ASM, breaking dev builds on Windows-on-ARM where
# the user only has the MSVC toolchain. native-tls uses SChannel on
# Windows (built into the OS, including ARM64), Secure Transport on
# macOS, and OpenSSL on Linux (already present on every Ubuntu CI
# image). One HTTP request per startup doesn't justify pulling in
# the crypto-from-scratch stack.
ureq = { version = "2", default-features = false, features = ["native-tls", "json"] }

# Windows-only: AttachConsole(ATTACH_PARENT_PROCESS) so the GUI
# release binary (declared as `windows_subsystem = "windows"`)
# can still print CLI flag output to the launching shell.
[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

# Build-time PNG decode + downscale to 256×256 RGBA for the window
# icon. The pre-decoded bytes are include_bytes!'d at runtime so
# there's no PNG-decoder dep in the resulting binary. The full
# `image` dependency tree only runs during `cargo build`.
[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }

# Windows-only build deps: assemble a multi-resolution .ico and
# embed it into the .exe via the standard Win32 RT_ICON resource
# so Explorer / taskbar / Alt-Tab show the rterm logo.
[target.'cfg(windows)'.build-dependencies]
ico = "0.3"
winresource = "0.1"

# cargo-wix metadata. Read by the CLI when invoked as
# `cargo wix --package rterm-app ...` to point at the bundled
# `wix/main.wxs` template. Path is relative to this Cargo.toml.
[package.metadata.wix]
name = "rterm"
no-build = true
output = "target/wix"
