[package]
name = "rterm-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Lua plugin host for rterm (built on mlua, Lua 5.4)"

[dependencies]
mlua = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rterm-core = { workspace = true }
regex = { workspace = true }
