[package]
name = "rterm-pty"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Cross-platform PTY spawning and I/O for rterm"

[dependencies]
portable-pty = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rterm-core = { workspace = true }
