[package]
name = "rterm-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "GPU-accelerated text grid renderer for rterm (wgpu + cosmic-text)"

[dependencies]
wgpu = { workspace = true }
winit = { workspace = true }
cosmic-text = { workspace = true }
glyphon = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
arboard = { workspace = true }
open = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
unicode-width = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rterm-core = { workspace = true }

# Win32 globals for the optional Guake global-hotkey worker thread.
# `RegisterHotKey` is the supported way to receive a system-wide key
# combo without focus stealing tricks; the bindings come pre-generated
# so we don't need a build.rs or a heavyweight Win32 crate.
[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }
