[package]
name = "rterm-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "GPU-accelerated text grid renderer for rterm (wgpu + cosmic-text)"

[dependencies]
wgpu = { workspace = true }
winit = { workspace = true }
cosmic-text = { workspace = true }
glyphon = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
arboard = { workspace = true }
open = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
unicode-width = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rterm-core = { workspace = true }
rterm-history = { workspace = true }

# Image-format decoder for the inline-image protocols. iTerm2 OSC
# 1337 ;File= and Kitty APC G both ship PNG / JPEG / GIF bytes
# over the wire; the parser side (in rterm-core) keeps them in
# their on-the-wire form, and the renderer decodes once on first
# GPU upload. PNG / JPEG / GIF are the formats real-world tools
# emit (chafa, matplotlib, yazi preview); pulling in WebP / TIFF
# / AVIF would balloon the dep tree for ~zero practical win.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }

# Win32 globals for the optional Guake global-hotkey worker thread.
# `RegisterHotKey` is the supported way to receive a system-wide key
# combo without focus stealing tricks; the bindings come pre-generated
# so we don't need a build.rs or a heavyweight Win32 crate.
[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }
